test/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fake-deployment
  labels:
    app: fake-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fake-app
  template:
    metadata:
      labels:
        app: fake-app
    spec:
      containers:
        - name: fake-app
          image: nginx:latest
          ports:
            - containerPort: 80
