test/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: fake-service
  labels:
    app: fake-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: fake-app
